calendar/templates/default/app.css
/* ... */
.calendar_plannerScaleDay {
	height: 28px;
	line-height: 14px;
}
.calendar_plannerDayScale,.calendar_plannerMonthScale,.calendar_plannerWeekScale,.calendar_plannerHourScale,.calendar_plannerDayOfMonthScale {
	position: absolute;
	top: 0px;
	/* left+width: is set by the code on runtime */
	text-align: center;
	height: 100%;
	border: 1px solid white;
/* set via inline style on runtime:
 *  left:
 *  width:
 */
}
.calendar_plannerHourScale {
	font-size: 90%;
}
.calendar_plannerDayScale {
	font-size: 90%;
}
.calendar_plannerWeekScale {
	line-height: 20px;
}
.calendar_plannerMonthScale {
	font-weight: bold;
}
.calendar_plannerDayScale img,.calendar_plannerWeekScale img,.calendar_plannerMonthScale img,.calendar_plannerDayOfMonthScale img {
	vertical-align: middle;
}

/* calendar_plannerRowHeader contains the user or category name of the calendar_plannerRowWidget
 */
.calendar_plannerRowHeader, .calendar_plannerHeaderTitle {
	position: absolute;
	top: 0px;
	left: 0%;
	width: 15%;		/* need to be identical for calendar_plannerRowHeader and calendar_plannerHeaderTitle and match left of calendar_eventRows/calendar_plannerHeaderRows */
	height: 100%;
	line-height: 20px;
	border: 1px solid white;
}

/* calendar_eventRows contain multiple eventRowWidgets
 */
.calendar_eventRows, .calendar_plannerHeaderRows {
	position: relative;
	top: 0px;
	left: 15%;	/* need to be identical for calendar_eventRows and calendar_plannerHeaderRows and match width of calendar_plannerRowHeader/calendar_plannerHeaderTitle */
	width: 85%;
}

/**
 * Filler for month with less then 31 days in yearly planner
 */
.calendar_eventRowsFiller {
	position: absolute;
	top: 0px;
	height: 93%;
	background-color: white;
	border: 1px dashed gray;
	border-right: none;
}

/**
 * Weekend or other special days in yearly planner
 */
.calendar_eventRowsMarkedDay {
	position: absolute;
	top: 0px;
	height: 100%;
	z-index: 10;
}

/* calendar_eventRowWidget contains non-overlapping events
 */
.calendar_eventRowWidget {
	position: relative;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 20px;
	border: 1px solid white;
}

.calendar_plannerEvent,.calendar_plannerEventPrivate{
	position: absolute;
	top: 0px;
	height: 100%;
	overflow: hidden;
	z-index: 20;
	border: 1px solid black;
/* set via inline style on runtime:
 *  left: depending on startime
 *  width: depending on length
 *  background-color: depending on category
 */
}
.calendar_plannerEvent img,.calendar_plannerEventPrivate img {
	padding-top: 2px;
}
.calendar_plannerEvent:hover{
	cursor: pointer;
}

/* Special colors for the year view */
.calendar_cal_year_legend_weekend {
    background-color: #CCCCCC;
}
.calendar_cal_year_legend {
    background-color: #EFEFEF;
}
.calendar_cal_year_legend {
    background-color: #FFFFCC;
    z-index: 0;
}
.calendar_cal_year_weekend {
    background-color: #F9F9CC;
    z-index: 0;
}
.calendar_cal_year_today {
    border-color: #EE0000;
    border-width: 2px;
}

/**
 * edit series or exception popup used in eventWidget and
 * delete series and exceptions popup used in edit event
 */
#calendar-edit_calendar-delete_series{
	position: fixed;
	top: 100px;
	left: 200px;
	z-index: 20000;
	display: none;
	border-collapse:collapse;
	border-spacing:0px
}
#dialog-content {
	display:block;
	height:100px;
	padding:6px;
	color:#666666;
	font-size:13px;
	margin: -2px -1px 0px -2px;
	width:410px;
}

