Fix calendar d-n-d not showing forbiden sign when try to drop in not accepted area

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -542,3 +542,22 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
 	margin: -2px -1px 0px -2px;
 	width:410px;
 }
+/**
+ * Calendar Drag and Drop
+ *
+ */
+//Class for div to show forbiden drop
+.calendar_d-n-d_forbiden
+{
+	background-color: red;
+	height: 100%;
+	width: 100%;
+	text-align: center;
+}
+//Class for div to demonstrate dragging time
+.calendar_d-n-d_timeCounter
+{
+	font-size: 1.1em;
+	font-weight: bold;
+	text-align: center;
+}
